--- a/cameralibrary/src/main/res/values/strings.xml
+++ b/cameralibrary/src/main/res/values/strings.xml
@@ -1,89 +1,89 @@
 <resources>
     <string name="app_name">CameraLibrary</string>
 
-    <string name="delete_last_video_tips">删除上一段视频？</string>
-    <string name="btn_delete">删除</string>
+    <string name="delete_last_video_tips">Delete last video tips？</string>
+    <string name="btn_delete">Delete</string>
 
     <!-- 合并提示 -->
-    <string name="combine_video_message">正在合并视频...</string>
+    <string name="combine_video_message">Merging video ...</string>
 
     <!--顶部设置文字-->
-    <string name="tv_flash">闪光灯</string>
-    <string name="tv_flash_front">柔光自拍</string>
-    <string name="tv_time_lapse">延时拍摄</string>
-    <string name="tv_luminous_compensation">夜拍补光</string>
-    <string name="tv_edge_blur">边框模糊</string>
-    <string name="tv_touch_take">触屏拍照</string>
-    <string name="tv_camera_setting">相机设置</string>
-    <string name="tv_select_music">选择音乐</string>
-    <string name="btn_stickers">道具</string>
-    <string name="btn_media">上传</string>
+    <string name="tv_flash">Flash</string>
+    <string name="tv_flash_front">Front flash</string>
+    <string name="tv_time_lapse">Time lapse</string>
+    <string name="tv_luminous_compensation">Night light</string>
+    <string name="tv_edge_blur">Edge blur</string>
+    <string name="tv_touch_take">Touch to capture</string>
+    <string name="tv_camera_setting">Camera settings</string>
+    <string name="tv_select_music">Select music</string>
+    <string name="btn_stickers">Stickers</string>
+    <string name="btn_media">Upload</string>
 
     <!-- 滤镜页面按钮 -->
-    <string name="tab_preview_beauty">美颜</string>
-    <string name="tab_preview_makeup">美妆</string>
-    <string name="tab_preview_filter">滤镜</string>
+    <string name="tab_preview_beauty">Beauty</string>
+    <string name="tab_preview_makeup">Makeup</string>
+    <string name="tab_preview_filter">Filter</string>
 
     <!-- 美颜 -->
     <string-array name="preview_beauty">
-        <item>磨皮</item>
-        <item>肤色</item>
-        <item>瘦脸</item>
-        <item>削脸</item>
-        <item>小脸</item>
-        <item>下巴</item>
-        <item>法令纹</item>
-        <item>额头</item>
-        <item>大眼</item>
-        <item>眼距</item>
-        <item>眼角</item>
-        <item>卧蚕</item>
-        <item>眼袋</item>
-        <item>亮眼</item>
-        <item>瘦鼻</item>
-        <item>鼻翼</item>
-        <item>长鼻</item>
-        <item>嘴型</item>
-        <item>美牙</item>
+        <item>Microdermabrasion</item>
+        <item>Color</item>
+        <item>Thin face</item>
+        <item>Face shaved</item>
+        <item>Small face</item>
+        <item>Jaw</item>
+        <item>Nasal lines</item>
+        <item>Forehead</item>
+        <item>Big eyes</item>
+        <item>Eye distance</item>
+        <item>Eye corner</item>
+        <item>Lying silkworm</item>
+        <item>Eye bags</item>
+        <item>Dazzling</item>
+        <item>Thin nose</item>
+        <item>Nose</item>
+        <item>Proboscis</item>
+        <item>Mouth type</item>
+        <item>Teeth</item>
     </string-array>
 
     <!-- 美妆 -->
     <string-array name="preview_makeup">
-        <item>口红</item>
-        <item>腮红</item>
-        <item>阴影</item>
-        <item>眉毛</item>
-        <item>眼影</item>
-        <item>眼线</item>
-        <item>睫毛</item>
-        <item>双眼皮</item>
-        <item>瞳孔</item>
+        <item>Lipstick</item>
+        <item>Blush</item>
+        <item>Shadow</item>
+        <item>Eyebrow</item>
+        <item>Eye shadow</item>
+        <item>Eyeliner</item>
+        <item>Eyelash</item>
+        <item>Double eyelid</item>
+        <item>Pupil</item>
     </string-array>
 
-    <string name="makeup_clear">一键清除</string>
+    <string name="makeup_clear">Clear makeup</string>
 
-    <string name="tab_picture">拍照</string>
-    <string name="tab_video_60s">拍60秒</string>
-    <string name="tab_video_15s">拍15秒</string>
-    <string name="tab_video_picture">影集</string>
+    <string name="tab_picture">Take picture</string>
+    <string name="tab_video_60s">60s video</string>
+    <string name="tab_video_15s">15s video</string>
+    <string name="tab_video_picture">Picture album</string>
 
     <!-- 录制速度 -->
     <string-array name="record_speed_texts">
-        <item>极慢</item>
-        <item>慢</item>
-        <item>标准</item>
-        <item>快</item>
-        <item>极快</item>
+        <item>Very slow</item>
+        <item>Slow</item>
+        <item>Standard</item>
+        <item>Fast</item>
+        <item>Very fast</item>
     </string-array>
 
     <!-- 特效页面参数 -->
-    <string name="preview_beauty_reset">恢复默认</string>
+    <string name="preview_beauty_reset">Reset beauty</string>
 
     <!-- 相机设置页面 -->
-    <string name="select_watermark">选择水印</string>
-    <string name="show_face_points">显示人脸关键点</string>
-    <string name="hide_face_points">隐藏人脸关键点</string>
-    <string name="show_fps">显示fps</string>
-    <string name="hide_fps">隐藏fps</string>
+    <string name="select_watermark">Choose watermark</string>
+    <string name="show_face_points">Show face points</string>
+    <string name="hide_face_points">Hide face points</string>
+    <string name="show_fps">Show fps</string>
+    <string name="hide_fps">Hide fps</string>
 
 </resources>
