--- a/videolibrary/src/main/res/values/strings.xml
+++ b/videolibrary/src/main/res/values/strings.xml
@@ -2,40 +2,40 @@
     <string name="app_name">VideoLibrary</string>
 
     <string-array name="video_speed_texts">
-        <item>慢</item>
-        <item>标准</item>
-        <item>快</item>
+        <item>slow</item>
+        <item>normal</item>
+        <item>fast</item>
     </string-array>
 
-    <string name="video_crop_next">下一步</string>
-    <string name="video_crop_time_15">15秒</string>
-    <string name="video_crop_time_120">2分钟</string>
-    <string name="video_crop_selected_time">已选取%1$d秒</string>
-    <string name="video_crop_selected_error">解析数据出现错误，暂不支持该视频</string>
-    <string name="video_crop_progress_tips">处理中...</string>
+    <string name="video_crop_next">next</string>
+    <string name="video_crop_time_15">15s</string>
+    <string name="video_crop_time_120">2min</string>
+    <string name="video_crop_selected_time">Crop at %1$d second</string>
+    <string name="video_crop_selected_error">There was an error parsing the data, this video is not currently supported</string>
+    <string name="video_crop_progress_tips">Processing...</string>
 
-    <!-- 编辑页面 -->
-    <string name="video_edit_back_press">返回上一步会丢失当前效果，是否返回</string>
-    <string name="video_edit_select_music">选配乐</string>
-    <string name="video_edit_voice">声音</string>
-    <string name="video_edit_cut_music">剪音乐</string>
-    <string name="video_edit_effect">特效</string>
-    <string name="video_edit_text">文字</string>
-    <string name="video_edit_filter">滤镜</string>
-    <string name="video_edit_stickers">贴纸</string>
-    <string name="video_edit_next">下一步</string>
-    <string name="video_edit_cancel">取消</string>
-    <string name="video_edit_save">保存</string>
-    <!-- 声音控制 -->
-    <string name="video_voice_save">保存</string>
-    <string name="video_voice_source">原声</string>
-    <string name="video_voice_background">配乐</string>
-    <string name="video_cut_music_title">左右拖动声谱以剪取音乐</string>
+    <!-- edit page -->
+    <string name="video_edit_back_press">Returning to the previous step will lose the current effect, whether to return</string>
+    <string name="video_edit_select_music">Music</string>
+    <string name="video_edit_voice">sound</string>
+    <string name="video_edit_cut_music">cut music</string>
+    <string name="video_edit_effect">effect</string>
+    <string name="video_edit_text">text</string>
+    <string name="video_edit_filter">filter</string>
+    <string name="video_edit_stickers">sticker</string>
+    <string name="video_edit_next">next</string>
+    <string name="video_edit_cancel">cancel</string>
+    <string name="video_edit_save">save</string>
+    <!-- voice control -->
+    <string name="video_voice_save">save</string>
+    <string name="video_voice_source">sound source</string>
+    <string name="video_voice_background">soundtrack</string>
+    <string name="video_cut_music_title">Drag the score left or right to cut the music</string>
 
-    <!-- 特效提示 -->
-    <string name="video_edit_effect_hint">选择位置后，按住使用效果</string>
-    <string name="video_edit_effect_cancel">撤销</string>
-    <string name="video_edit_effect_category_filter">滤镜特效</string>
-    <string name="video_edit_effect_category_time">时间特效</string>
+    <!-- Special effect tips -->
+    <string name="video_edit_effect_hint">With selected location, press + hold to use effect</string>
+    <string name="video_edit_effect_cancel">revoke</string>
+    <string name="video_edit_effect_category_filter">filter effect</string>
+    <string name="video_edit_effect_category_time">time effect</string>
 
 </resources>
